--- a/about.html
+++ b/about.html
@@ -157,55 +157,9 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid bg-light">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5">
-                    <div class="d-flex flex-column align-items-center justify-content-center bg-primary h-100 py-5 px-3">
-                        <i class="flaticon-brickwall display-1 font-weight-normal text-secondary mb-3"></i>
-                        <h4 class="display-3 mb-3">25+</h4>
-                        <h1 class="m-0">Years Experience</h1>
-                    </div>
-                </div>
-                <div class="col-lg-7 m-0 my-lg-5 pt-5 pb-5 pb-lg-2 pl-lg-5">
-                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">Learn About Us</h6>
-                    <h1 class="mb-4 section-title">We Are The Best Interior Designing Firm In Your City</h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
-                    <div class="row py-2">
-                        <div class="col-sm-6">
-                            <div class="d-flex align-items-center mb-4">
-                                <h1 class="flaticon-house font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Project Planning</h5>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="d-flex align-items-center mb-4">
-                                <h1 class="flaticon-stairs font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Exterior & Interior</h5>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="d-flex align-items-center mb-4">
-                                <h1 class="flaticon-office font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Commercial Design</h5>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="d-flex align-items-center mb-4">
-                                <h1 class="flaticon-living-room font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Residential Design</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- About End -->
-
-
+    
     <!-- Features Start -->
-    <div class="container-fluid bg-white">
+    <div class="container-fluid bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 mt-5 py-5 pr-lg-5">
@@ -214,14 +168,14 @@
                     <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
                     <ul class="list-inline">
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i>25+ Years Experience</h5></li>
-                        <li><h5><i class="far fa-check-square text-primary mr-3"></i>Best Interior Design</h5></li>
+                        <li><h5><i class="far fa-check-square text-primary mr-3"></i>Best Insurance Provider</h5></li>
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i>Customer Satisfaction</h5></li>
                     </ul>
                     <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
                 <div class="col-lg-5">
                     <div class="d-flex flex-column align-items-center justify-content-center h-100 overflow-hidden">
-                        <img class="h-100" src="img/feature.jpg" alt="">
+                        <img class="h-100 img-fluid" height="200px" src="img/truck2.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -230,14 +184,148 @@
     <!-- Features End -->
 
 
+    <!-- Projects Start -->
+    <!-- <div class="container-fluid py-5">
+        <div class="container py-5">
+            <div class="row justify-content-center">
+                <div class="col-lg-6 col-md-8 col text-center mb-4">
+                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">Our Projects</h6>
+                    <h1 class="mb-4">Some Of Our Awesome Interior Designing Projects</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 text-center mb-2">
+                    <ul class="list-inline mb-4" id="portfolio-flters">
+                        <li class="btn btn-outline-primary m-1 active"  data-filter="*">All</li>
+                        <li class="btn btn-outline-primary m-1" data-filter=".first">Complete</li>
+                        <li class="btn btn-outline-primary m-1" data-filter=".second">Running</li>
+                        <li class="btn btn-outline-primary m-1" data-filter=".third">Upcoming</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row mx-1 portfolio-container">
+                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item first">
+                    <div class="position-relative overflow-hidden">
+                        <div class="portfolio-img d-flex align-items-center justify-content-center">
+                            <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
+                        </div>
+                        <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
+                            <h4 class="text-white mb-4">Project Name</h4>
+                            <div class="d-flex align-items-center justify-content-center">
+                                <a class="btn btn-outline-primary m-1" href="">
+                                    <i class="fa fa-link"></i>
+                                </a>
+                                <a class="btn btn-outline-primary m-1" href="img/portfolio-1.jpg" data-lightbox="portfolio">
+                                    <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item second">
+                    <div class="position-relative overflow-hidden">
+                        <div class="portfolio-img d-flex align-items-center justify-content-center">
+                            <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+                        </div>
+                        <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
+                            <h4 class="text-white mb-4">Project Name</h4>
+                            <div class="d-flex align-items-center justify-content-center">
+                                <a class="btn btn-outline-primary m-1" href="">
+                                    <i class="fa fa-link"></i>
+                                </a>
+                                <a class="btn btn-outline-primary m-1" href="img/portfolio-2.jpg" data-lightbox="portfolio">
+                                    <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item third">
+                    <div class="position-relative overflow-hidden">
+                        <div class="portfolio-img d-flex align-items-center justify-content-center">
+                            <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+                        </div>
+                        <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
+                            <h4 class="text-white mb-4">Project Name</h4>
+                            <div class="d-flex align-items-center justify-content-center">
+                                <a class="btn btn-outline-primary m-1" href="">
+                                    <i class="fa fa-link"></i>
+                                </a>
+                                <a class="btn btn-outline-primary m-1" href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                                    <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item first">
+                    <div class="position-relative overflow-hidden">
+                        <div class="portfolio-img d-flex align-items-center justify-content-center">
+                            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+                        </div>
+                        <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
+                            <h4 class="text-white mb-4">Project Name</h4>
+                            <div class="d-flex align-items-center justify-content-center">
+                                <a class="btn btn-outline-primary m-1" href="">
+                                    <i class="fa fa-link"></i>
+                                </a>
+                                <a class="btn btn-outline-primary m-1" href="img/portfolio-4.jpg" data-lightbox="portfolio">
+                                    <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item second">
+                    <div class="position-relative overflow-hidden">
+                        <div class="portfolio-img d-flex align-items-center justify-content-center">
+                            <img class="img-fluid" src="img/portfolio-5.jpg" alt="">
+                        </div>
+                        <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
+                            <h4 class="text-white mb-4">Project Name</h4>
+                            <div class="d-flex align-items-center justify-content-center">
+                                <a class="btn btn-outline-primary m-1" href="">
+                                    <i class="fa fa-link"></i>
+                                </a>
+                                <a class="btn btn-outline-primary m-1" href="img/portfolio-5.jpg" data-lightbox="portfolio">
+                                    <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item third">
+                    <div class="position-relative overflow-hidden">
+                        <div class="portfolio-img d-flex align-items-center justify-content-center">
+                            <img class="img-fluid" src="img/portfolio-6.jpg" alt="">
+                        </div>
+                        <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
+                            <h4 class="text-white mb-4">Project Name</h4>
+                            <div class="d-flex align-items-center justify-content-center">
+                                <a class="btn btn-outline-primary m-1" href="">
+                                    <i class="fa fa-link"></i>
+                                </a>
+                                <a class="btn btn-outline-primary m-1" href="img/portfolio-6.jpg" data-lightbox="portfolio">
+                                    <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <!-- Projects End -->
+
+
     <!-- Team Start -->
     <div class="container-fluid bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <div class="py-5 px-4 h-100 bg-primary d-flex flex-column align-items-center justify-content-center">
-                        <h6 class="text-white font-weight-normal text-uppercase mb-3">Our Team</h6>
-                        <h1 class="mb-0 text-center">Meet Our Team Members</h1>
+                        <h6 class="text-white font-weight-normal text-uppercase mb-3">Our Clients</h6>
+                        <h1 class="mb-0 text-center">Meet Our Satisfied Customer</h1>
                     </div>
                 </div>
                 <div class="col-md-8 col-sm-6 p-0 py-sm-5">
@@ -304,6 +392,7 @@
         </div>
     </div>
     <!-- Team End -->
+
 
 
     <!-- Footer Start -->
