--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>iDESIGN - Interior Design HTML Template</title>
+    <title>iDESIGN - Inurance Design HTML Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -72,7 +72,7 @@
         <div class="container position-relative" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="m-0 display-5 text-white"><span class="text-primary">i</span>DESIGN</h1>
+                    <h1 class="m-0 display-5 text-white"><span class="text-primary">we</span>INSURE</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -141,21 +141,21 @@
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+                    <img class="w-100" src="img/truck1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 800px;">
-                            <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Creative Interior Design</h4>
-                            <h3 class="display-3 text-white mb-md-4">Make Your Home Better</h3>
+                            <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Best Inurance Provider</h4>
+                            <h3 class="display-3 text-white mb-md-4">Get Your Auto Fully Insured</h3>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2 mt-md-4">Learn More</a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+                    <img class="w-100" src="img/truck1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 800px;">
-                            <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Creative Interior Design</h4>
-                            <h3 class="display-3 text-white mb-md-4">Stay At Home In Peace</h3>
+                            <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Best Inurance Provider</h4>
+                            <h3 class="display-3 text-white mb-md-4">Get Your Property Insured Today! </h3>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2 mt-md-4">Learn More</a>
                         </div>
                     </div>
@@ -189,31 +189,31 @@
                 </div>
                 <div class="col-lg-7 m-0 my-lg-5 pt-5 pb-5 pb-lg-2 pl-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Learn About Us</h6>
-                    <h1 class="mb-4 section-title">We Are The Best Interior Designing Firm In Your City</h1>
+                    <h1 class="mb-4 section-title">We Are The Best Insurance Provider In Your City</h1>
                     <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
                     <div class="row py-2">
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
                                 <h1 class="flaticon-house font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Project Planning</h5>
+                                <h5 class="text-truncate m-0">Property Insurance </h5>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
                                 <h1 class="flaticon-stairs font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Exterior & Interior</h5>
+                                <h5 class="text-truncate m-0">Auto Insurance</h5>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
                                 <h1 class="flaticon-office font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Commercial Design</h5>
+                                <h5 class="text-truncate m-0">Commercial Insurance</h5>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
                                 <h1 class="flaticon-living-room font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Residential Design</h5>
+                                <h5 class="text-truncate m-0">Life Insurance</h5>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
             <div class="row">
                 <div class="col-lg-6 pr-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Our Awesome Services</h6>
-                    <h1 class="mb-4 section-title">Awesome Interior Designing Services For Your Home</h1>
+                    <h1 class="mb-4 section-title">Awesome Insurance  Services For Your Home</h1>
                     <p>Invidunt lorem justo clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum</p>
                     <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
@@ -269,14 +269,14 @@
                     <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
                     <ul class="list-inline">
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i>25+ Years Experience</h5></li>
-                        <li><h5><i class="far fa-check-square text-primary mr-3"></i>Best Interior Design</h5></li>
+                        <li><h5><i class="far fa-check-square text-primary mr-3"></i>Best Insurance Provider</h5></li>
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i>Customer Satisfaction</h5></li>
                     </ul>
                     <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
                 <div class="col-lg-5">
                     <div class="d-flex flex-column align-items-center justify-content-center h-100 overflow-hidden">
-                        <img class="h-100" src="img/feature.jpg" alt="">
+                        <img class="h-100 img-fluid" height="200px" src="img/truck2.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -286,7 +286,7 @@
 
 
     <!-- Projects Start -->
-    <div class="container-fluid py-5">
+    <!-- <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-8 col text-center mb-4">
@@ -415,7 +415,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Projects End -->
 
 
@@ -425,8 +425,8 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <div class="py-5 px-4 h-100 bg-primary d-flex flex-column align-items-center justify-content-center">
-                        <h6 class="text-white font-weight-normal text-uppercase mb-3">Our Team</h6>
-                        <h1 class="mb-0 text-center">Meet Our Team Members</h1>
+                        <h6 class="text-white font-weight-normal text-uppercase mb-3">Our Clients</h6>
+                        <h1 class="mb-0 text-center">Meet Our Satisfied Customer</h1>
                     </div>
                 </div>
                 <div class="col-md-8 col-sm-6 p-0 py-sm-5">
@@ -525,9 +525,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 p-4">
                     <div class="d-flex flex-column align-items-center justify-content-center h-100 overflow-hidden">
-                        <img class="h-100" src="img/testimonial.jpg" alt="">
+                        <img class="h-100 img-fluid" src="img/truck2.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -537,7 +537,7 @@
 
 
     <!-- Blog Start -->
-    <div class="container-fluid bg-light pt-5">
+    <!-- <div class="container-fluid bg-light pt-5">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-8 col text-center mb-4">
@@ -599,7 +599,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Blog End -->
 
 
