--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
             <div class="row">
                 <div class="col-lg-7 mt-5 py-5 pr-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Why Choose Us?</h6>
-                    <h1 class="mb-4 section-title">25+ Years Experience In The Interior Design Industry</h1>
+                    <h1 class="mb-4 section-title">25+ Years Experience In The Insurance  Industry</h1>
                     <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
                     <ul class="list-inline">
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i>25+ Years Experience</h5></li>
@@ -185,7 +185,7 @@
 
 
     <!-- Projects Start -->
-    <!-- <div class="container-fluid py-5">
+ <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-8 col text-center mb-4">
@@ -314,7 +314,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- Projects End -->
 
 
