--- a/index.html
+++ b/index.html
@@ -237,18 +237,18 @@
                 <div class="col-lg-6 p-0 pt-5 pt-lg-0">
                     <div class="owl-carousel service-carousel position-relative">
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
-                            <h3 class="flaticon-bedroom display-3 font-weight-normal text-primary mb-3"></h3>
-                            <h5 class="mb-3">Bedroom Design</h5>
+                            <h3 class="flaticon-office display-3 font-weight-normal text-primary mb-3"></h3>
+                            <h5 class="mb-3">Insurance 1</h5>
                             <p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos</p>
                         </div>
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
-                            <h3 class="flaticon-kitchen display-3 font-weight-normal text-primary mb-3"></h3>
-                            <h5 class="mb-3">Kitchen Design</h5>
+                            <h3 class="flaticon-house display-3 font-weight-normal text-primary mb-3"></h3>
+                            <h5 class="mb-3"> Insurance 2</h5>
                             <p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos</p>
                         </div>
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
-                            <h3 class="flaticon-bathroom display-3 font-weight-normal text-primary mb-3"></h3>
-                            <h5 class="mb-3">Bathroom Design</h5>
+                            <h3 class="flaticon-office display-3 font-weight-normal text-primary mb-3"></h3>
+                            <h5 class="mb-3">Insurance 3</h5>
                             <p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos</p>
                         </div>
                     </div>
