--- a/service.html
+++ b/service.html
@@ -84,10 +84,13 @@
                         <a href="service.html" class="nav-item nav-link active">Service</a>
                         <a href="project.html" class="nav-item nav-link">Project</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Services</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                <!-- <a href="blog.html" class="dropdown-item">Blog Grid</a> -->
+                                <a href="single.html" class="dropdown-item">Insurance 1</a>
+                                <a href="single.html" class="dropdown-item">Insurance 2</a>
+                                <a href="single.html" class="dropdown-item">Insurance 3</a>
+                                <!-- <a href="single.html" class="dropdown-item">Insurance 4</a> -->
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -162,25 +165,25 @@
             <div class="row">
                 <div class="col-lg-6 pr-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Our Awesome Services</h6>
-                    <h1 class="mb-4 section-title">Awesome Interior Designing Services For Your Home</h1>
+                    <h1 class="mb-4 section-title">Awesome Insurance  Services For Your Home</h1>
                     <p>Invidunt lorem justo clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum</p>
                     <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
                 <div class="col-lg-6 p-0 pt-5 pt-lg-0">
                     <div class="owl-carousel service-carousel position-relative">
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
-                            <h3 class="flaticon-bedroom display-3 font-weight-normal text-primary mb-3"></h3>
-                            <h5 class="mb-3">Bedroom Design</h5>
+                            <h3 class="flaticon-office display-3 font-weight-normal text-primary mb-3"></h3>
+                            <h5 class="mb-3">Insurance 1</h5>
                             <p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos</p>
                         </div>
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
-                            <h3 class="flaticon-kitchen display-3 font-weight-normal text-primary mb-3"></h3>
-                            <h5 class="mb-3">Kitchen Design</h5>
+                            <h3 class="flaticon-house display-3 font-weight-normal text-primary mb-3"></h3>
+                            <h5 class="mb-3"> Insurance 2</h5>
                             <p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos</p>
                         </div>
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
-                            <h3 class="flaticon-bathroom display-3 font-weight-normal text-primary mb-3"></h3>
-                            <h5 class="mb-3">Bathroom Design</h5>
+                            <h3 class="flaticon-office display-3 font-weight-normal text-primary mb-3"></h3>
+                            <h5 class="mb-3">Insurance 3</h5>
                             <p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos</p>
                         </div>
                     </div>
@@ -191,24 +194,25 @@
     <!-- Services End -->
 
 
-    <!-- Features Start -->
-    <div class="container-fluid bg-light">
+
+      <!-- Features Start -->
+      <div class="container-fluid bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 mt-5 py-5 pr-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Why Choose Us?</h6>
-                    <h1 class="mb-4 section-title">25+ Years Experience In The Interior Design Industry</h1>
+                    <h1 class="mb-4 section-title">25+ Years Experience In The Insurance Industry</h1>
                     <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
                     <ul class="list-inline">
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i>25+ Years Experience</h5></li>
-                        <li><h5><i class="far fa-check-square text-primary mr-3"></i>Best Interior Design</h5></li>
+                        <li><h5><i class="far fa-check-square text-primary mr-3"></i>Best Insurance Provider</h5></li>
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i>Customer Satisfaction</h5></li>
                     </ul>
                     <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
                 <div class="col-lg-5">
                     <div class="d-flex flex-column align-items-center justify-content-center h-100 overflow-hidden">
-                        <img class="h-100" src="img/feature.jpg" alt="">
+                        <img class="h-100 img-fluid" height="200px" src="img/truck2.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -221,12 +225,7 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
-                    <div class="d-flex flex-column align-items-center justify-content-center h-100 overflow-hidden">
-                        <img class="h-100" src="img/testimonial.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-md-7 py-5 pl-md-5">
+                <div class="col-md-7 py-5 pr-md-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3 pt-5">Testimonial</h6>
                     <h1 class="mb-4 section-title">What Our Clients Say</h1>
                     <div class="owl-carousel testimonial-carousel position-relative pb-5 mb-md-5">
@@ -252,11 +251,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-5 p-4">
+                    <div class="d-flex flex-column align-items-center justify-content-center h-100 overflow-hidden">
+                        <img class="h-100 img-fluid" src="img/truck2.jpg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <!-- Testimonial End -->
-
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white py-5 px-sm-3 px-md-5">
