--- a/about.html
+++ b/about.html
@@ -84,10 +84,13 @@
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="project.html" class="nav-item nav-link">Project</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Services</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                <!-- <a href="blog.html" class="dropdown-item">Blog Grid</a> -->
+                                <a href="single.html" class="dropdown-item">Insurance 1</a>
+                                <a href="single.html" class="dropdown-item">Insurance 2</a>
+                                <a href="single.html" class="dropdown-item">Insurance 3</a>
+                                <!-- <a href="single.html" class="dropdown-item">Insurance 4</a> -->
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
