--- a/index.html
+++ b/index.html
@@ -84,10 +84,13 @@
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="project.html" class="nav-item nav-link">Project</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Services</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                <!-- <a href="blog.html" class="dropdown-item">Blog Grid</a> -->
+                                <a href="single.html" class="dropdown-item">Insurance 1</a>
+                                <a href="single.html" class="dropdown-item">Insurance 2</a>
+                                <a href="single.html" class="dropdown-item">Insurance 3</a>
+                                <!-- <a href="single.html" class="dropdown-item">Insurance 4</a> -->
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -182,7 +185,7 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="d-flex flex-column align-items-center justify-content-center bg-primary h-100 py-5 px-3">
-                        <i class="flaticon-brickwall display-1 font-weight-normal text-secondary mb-3"></i>
+                        <i class="flaticon-office display-1 font-weight-normal text-secondary mb-3"></i>
                         <h4 class="display-3 mb-3">25+</h4>
                         <h1 class="m-0">Years Experience</h1>
                     </div>
