--- a/single.html
+++ b/single.html
@@ -84,10 +84,13 @@
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="project.html" class="nav-item nav-link">Project</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Services</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                <!-- <a href="blog.html" class="dropdown-item">Blog Grid</a> -->
+                                <a href="single.html" class="dropdown-item">Insurance 1</a>
+                                <a href="single.html" class="dropdown-item">Insurance 2</a>
+                                <a href="single.html" class="dropdown-item">Insurance 3</a>
+                                <!-- <a href="single.html" class="dropdown-item">Insurance 4</a> -->
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -141,13 +144,13 @@
         <div class="container py-5">
             <div class="row align-items-center py-4">
                 <div class="col-md-6 text-center text-md-left">
-                    <h1 class="mb-4 mb-md-0 text-primary text-uppercase">Blog Detail</h1>
+                    <h1 class="mb-4 mb-md-0 text-primary text-uppercase">Insurance Services</h1>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <div class="d-inline-flex align-items-center">
                         <a class="btn btn-outline-primary" href="">Home</a>
                         <i class="fas fa-angle-double-right text-primary mx-2"></i>
-                        <a class="btn btn-outline-primary disabled" href="">Blog Detail</a>
+                        <a class="btn btn-outline-primary disabled" href="">Services</a>
                     </div>
                 </div>
             </div>
@@ -158,9 +161,9 @@
 
     <!-- Detail Start -->
     <div class="container py-5">
-        <div class="row pt-5">
-            <div class="col-lg-8">
-                <div class="d-flex flex-column text-left mb-4">
+        <div class="row pt-2">
+            <div class="col-lg-12">
+                <!-- <div class="d-flex flex-column text-left mb-4">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Blog Detail Page</h6>
                     <h1 class="mb-4 section-title">Diam dolor est ipsum clita lorem</h1>
                     <div class="d-index-flex mb-2">
@@ -168,21 +171,23 @@
                         <span class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</span>
                         <span class="mr-3"><i class="fa fa-comments text-primary"></i> 15</span>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="mb-5">
-                    <img class="img-fluid w-100 mb-4" src="img/carousel-1.jpg" alt="Image">
+                    <img class="img-fluid w-75 mb-4" src="img/truck1.jpg" alt="Image">
                     <p>Sadipscing labore amet rebum est et justo gubergren. Et eirmod ipsum sit diam ut magna lorem. Nonumy vero labore lorem sanctus rebum et lorem magna kasd, stet amet magna accusam consetetur eirmod. Kasd accusam sit ipsum sadipscing et at at sanctus et. Ipsum sit gubergren dolores et, consetetur justo invidunt at et aliquyam ut et vero clita. Diam sea sea no sed dolores diam nonumy, gubergren sit stet no diam kasd vero.</p>
                     <p>Voluptua est takimata stet invidunt sed rebum nonumy stet, clita aliquyam dolores vero stet consetetur elitr takimata rebum sanctus. Sit sed accusam stet sit nonumy kasd diam dolores, sanctus lorem kasd duo dolor dolor vero sit et. Labore ipsum duo sanctus amet eos et. Consetetur no sed et aliquyam ipsum justo et, clita lorem sit vero amet amet est dolor elitr, stet et no diam sit. Dolor erat justo dolore sit invidunt.</p>
                     <h2 class="mb-4">Est dolor lorem et ea</h2>
-                    <img class="img-fluid w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
+                    <img class="img-fluid w-50 float-left mr-4 mb-3" src="img/building1.jpg" alt="Image">
                     <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam tempor rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos. Accusam eirmod kasd lorem clita sanctus ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem dolore, elitr aliquyam takimata sea kasd dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no. Rebum voluptua magna eos magna, justo gubergren labore sit voluptua eos.</p>
                     <h3 class="mb-4">Est dolor lorem et ea</h3>
-                    <img class="img-fluid w-50 float-right ml-4 mb-3" src="img/blog-2.jpg" alt="Image">
+                    <img class="img-fluid w-50 float-right ml-4 mb-3" src="img/fire-house.jpg" alt="Image">
                     <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam tempor rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos. Accusam eirmod kasd lorem clita sanctus ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem dolore, elitr aliquyam takimata sea kasd dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no.</p>
                 </div>
 
-                <div class="mb-5 mx-n3">
+                <!--  Related Posts   -->
+
+                <!-- <div class="mb-5 mx-n3">
                     <h3 class="mb-4 ml-3 section-title">Related Post</h3>
                     <div class="owl-carousel service-carousel position-relative">
                         <div class="card border-0 mx-3">
@@ -231,9 +236,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="mb-5">
+                  <!--  Related Posts End  -->
+
+                <!-- <div class="mb-5">
                     <h3 class="mb-4 section-title">3 Comments</h3>
                     <div class="media mb-4">
                         <img src="img/user.jpg" alt="Image" class="img-fluid mr-3 mt-1" style="width: 45px;">
@@ -259,9 +266,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="bg-light p-5">
+                <!-- <div class="bg-light p-5">
                     <h3 class="mb-4 section-title">Leave a comment</h3>
                     <form>
                         <div class="form-group">
@@ -285,10 +292,10 @@
                             <input type="submit" value="Leave Comment" class="btn btn-primary px-3">
                         </div>
                     </form>
-                </div>
+                </div> -->
             </div>
 
-            <div class="col-lg-4 mt-5 mt-lg-0">
+            <!-- <div class="col-lg-4 mt-5 mt-lg-0">
                 <div class="d-flex flex-column text-center bg-secondary mb-5 py-5 px-4">
                     <img src="img/user.jpg" class="img-fluid mx-auto mb-3" style="width: 100px;">
                     <h3 class="text-primary mb-3">John Doe</h3>
@@ -412,7 +419,7 @@
                     <h3 class="mb-4 section-title">Plain Text</h3>
                     Aliquyam sed lorem stet diam dolor sed ut sit. Ut sanctus erat ea est aliquyam dolor et. Et no consetetur eos labore ea erat voluptua et. Et aliquyam dolore sed erat. Magna sanctus sed eos tempor rebum dolor, tempor takimata clita sit et elitr ut eirmod.
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Detail End -->
